# oop_lab

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml
lab_02/: CMakeLists.txt  Dockerfile  main.cpp
lab_02/include/: binary.h
lab_02/src/: binary.cpp
lab_02/tests/: test_binary.cpp
lab_03/: CMakeLists.txt  Figure.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Trapezoid.cpp  Trapezoid.h  main.cpp
lab_03/tests/: test_figures.cpp
src/: CMakeLists.txt  functions.cpp  functions.h  main  main.cpp
tests/: CMakeLists.txt  test_functions.cpp
